--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "nextjs",
-  "version": "1.0.0",
+  "name": "backendapp",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.1",
+    "ipfs-api": "^26.1.2",
+    "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3": "^1.6.0"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint": "7",
+    "eslint-config-next": "12.0.3"
   }
 }
